add_subdirectory(bim/core)
add_subdirectory(bim/game)
add_subdirectory(bim/net)
add_subdirectory(bim/app)
add_subdirectory(bim/server)

add_subdirectory(axmol/core)
add_subdirectory(axmol/action)
add_subdirectory(axmol/audio)
add_subdirectory(axmol/display)
add_subdirectory(axmol/files)
add_subdirectory(axmol/http)
add_subdirectory(axmol/input)
add_subdirectory(axmol/schedule)
add_subdirectory(axmol/style)
add_subdirectory(axmol/widget)

if(BIM_BUILDING_FOR_ANDROID)
  add_subdirectory(axmol/jni)
endif()
